@@ -1,5 +1,6 @@
 2013-06-21 Pierrick Caillon <pierrick.caillon@plan-net.fr>
 	* Added cache scheduler task and required dependencies.
+	* Added APIService::getEndOfCourseByStopIdx.
 
 2013-06-20 Pierrick Caillon <pierrick.caillon@plan-net.fr>
 	* Added APIService::getDepartureBoardByStopAreaForLine.
